--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,17 +1,12 @@
 $openSans: "Open Sans", "Arial", sans-serif;
-$maxWidth: 1280px;
-$mainWidth: 1440px;
-$tabletResolution: 1023px;
-$mobileResolution: 767px;
-$retina-dpi: 144dpi;
-$retina-dppx: 1.5dppx;
+$myriadPro: "Myriad Pro", "Arial", sans-serif;
 
-//colors
-$backgroundGreen: #0f3916;
-$lightBackgroundGreen: #1b532d;
-$greenGradient: linear-gradient(257deg, #19361d, #165420);
-$buttonGreen: rgb(62, 174, 95);
+$maxWidth: 1200px;
+$tabletResolution: 1024px;
+$mobileResolution: 768px;
 
-//resolutions
-$tabletResolution: 1023px;
-$mobileResolution: 767px;
+$purple: #8c5d79;
+$blue: #5a9aa8;
+$green: #89c39b;
+$grey: #f5f5f5;
+$dark: #1a1a1a;
