--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -1,13 +1,7 @@
-html, body {
-  height: 100%;
-  min-height: 100%;
-}
-
 .body {
-  @include reset;
+  margin: 0;
+  padding: 0;
   font-family: $openSans;
   font-weight: normal;
   font-size: 16px;
-  display: flex;
-  flex-direction: column;
 }
