--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -8,18 +8,18 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
-  src: url("../fonts/opensanslight.woff2") format("woff2"),
-      url("../fonts/opensanslight.woff") format("woff");
-  font-weight: 300;
+  font-family: "Myriad Pro";
+  src: url("../fonts/myriadproregular.woff2") format("woff2"),
+  url("../fonts/myriadproregular.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Open Sans";
-  src: url("../fonts/opensansbold.woff2") format("woff2"),
-      url("../fonts/opensansbold.woff") format("woff");
+  font-family: "Myriad Pro";
+  src: url("../fonts/myriadprobold.woff2") format("woff2"),
+  url("../fonts/myriadprobold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
