--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -193,3 +193,79 @@
 .main__list-item:nth-of-type(2n) + .main__list-button {
   width: 100%;
 }
+
+@media (max-width: $tabletResolution) {
+  .main aside {
+    width: 26%;
+  }
+
+  .main__banner {
+    padding: 20px;
+  }
+
+  .main__banner a {
+    width: 80px;
+    height: 80px;
+    margin-top: 0;
+  }
+
+  .main__container {
+    padding: 0 40px;
+  }
+
+  .main__container-inner {
+    margin-right: 30px;
+  }
+
+  .main__banner-counter {
+    width: 100%;
+    position: relative;
+    margin-left: auto;
+    background-color: transparent;
+  }
+
+  .main__banner-description {
+    width: 75%;
+    padding: 0;
+    padding-bottom: 10px;
+  }
+
+  .main__banner-list {
+    width: 100%;
+    padding: 5px 0;
+    text-align: right;
+  }
+
+  .main__banner-list-item {
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: $purple;
+    padding: 5px 10px;
+  }
+
+  .main__banner-list-item p,
+  .main__banner-list-item h3 {
+    display: inline-block;
+    margin-bottom: 0;
+  }
+
+  .main__banner-list-item h3::after {
+    display: none;
+  }
+
+  .main__list-item {
+    width: 47%;
+  }
+
+  .main__list-item:nth-of-type(2n-1) {
+    margin-right: 20px;
+  }
+
+  .main__list-button {
+    width: 47%;
+  }
+
+  .main__list-button button {
+    width: 100%;
+  }
+}
