--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -128,7 +128,7 @@
 
   .features__list-item:nth-of-type(2n) span,
   .features__list-item:nth-of-type(2n-1) span {
-    width: 40%;
+    width: 55%;
   }
 
   .features__list-item:nth-of-type(2n-1) span {
@@ -146,5 +146,72 @@
     height: 250px;
     top: -15px;
     margin-left: -125px;
+  }
+}
+
+@media (max-width: $mobileResolution) {
+  .features {
+    padding: 30px 20px;
+    overflow: hidden;
+  }
+
+  .features__circle {
+    width: 5px;
+    height: 100%;
+    margin: 0;
+    top: 30px;
+    left: 32px;
+    border-radius: 0;
+  }
+
+  .features__list-item,
+  .features__list-item:nth-of-type(2n),
+  .features__list-item:nth-of-type(2n - 1) {
+    width: 100%;
+    display: block;
+    margin: 0;
+    right: 0;
+    left: 0;
+    padding: 0;
+    text-align: left;
+    min-height: 30px;
+    font-size: 16px;
+    padding-left: 40px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    margin-bottom: 15px;
+  }
+
+  .features__list-item:nth-of-type(2n-1)::after,
+  .features__list-item:nth-of-type(2n)::before {
+    width: 30px;
+    height: 30px;
+    z-index: 2;
+  }
+
+  .features__list-item:nth-of-type(2n-1)::after {
+    left: 0;
+    margin-left: 0;
+  }
+
+  .features__list-item:nth-of-type(2n) span,
+  .features__list-item:nth-of-type(2n-1) span {
+    position: relative;
+    width: 90%;
+    right: 0;
+  }
+
+  .features__list-item:nth-of-type(2n) span::before,
+  .features__list-item:nth-of-type(2n-1) span::before {
+    content: '';
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    background-color: $blue;
+    position: absolute;
+    left: -45px;
+    top: -12px;
+    border-radius: 50%;
+    z-index: 1;
   }
 }
